# ONE

.github/workflows/: run-tools-ci-test-project-build.yml
circle-mlir/circle-mlir/lib/pass/src/: RewriteCirclePass.cpp  RuntimeVerifyPass.cpp  RuntimeVerifyPass.h  ShapeInferencePass.cpp  ShapeInferencePass.h
circle-mlir/circle-mlir/tools/onnx2circle/: test.lst
circle-mlir/circle-mlir/tools/onnx2circle/src/: driverDebug.cpp
compiler/circle-part-value-test/: CMakeLists.txt  test.lst
compiler/circle-partitioner/: README.md
compiler/circle-partitioner-test/: test.lst
compiler/luci/: CMakeLists.txt
compiler/luci-interpreter/src/kernels/: If.cpp
compiler/luci-pass-value-test/: test.lst
compiler/luci/lang/src/: Module.cpp
compiler/luci/logex/src/: FormattedGraph.cpp
compiler/luci/partition/src/: ConnectNode.h  PartitionPGroups.cpp  PartitionPModules.cpp
compiler/luci/service/src/: CircleCloneNode.h  Validate.cpp
compiler/luci/service/src/Nodes/: CircleIf.cpp  CircleIfOut.cpp
compiler/one-cmds/: one-import-onnx
docs/howto/: how-to-build-compiler.md
res/TensorFlowLiteRecipes/Net_Conv_Relu_000/: test.recipe  test.rule
res/TensorFlowLiteRecipes/Part_If_Add_Sub_001/: test.recipe
res/TensorFlowPythonExamples/examples/cond_1/: __init__.py
tools/ci-test-project/: CMakeLists.txt
tools/ci-test-project/src/: main.cpp  main.test.cpp
